--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "require": {
         "php": ">=8.3",
         "spryker/comment": "^1.4.0",
-        "spryker/gui": "^3.53.0",
+        "spryker/gui": "^3.53.0 || ^4.0.0",
         "spryker/kernel": "^3.33.0",
         "spryker/symfony": "^3.0.0",
         "spryker/transfer": "^3.27.0",
